[package]
name = "solana_trading_bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading_bot"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18.26"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-program = "1.18"
solana-program-test = "1.18"
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15"
spl-token = "4.0"
anyhow = "1.0"
futures = "0.3"
bs58 = "0.5"
serde_json = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
pumpfun = "2.0.0"
anchor-lang = "0.30.0"
anchor-client = "0.30.0"
base58 = "0.1.0"
spl-associated-token-account = "1.1.0"
jito-sdk-rust = "0.1.0"
bincode = "1.3"
base64 = "0.21"
